# pipe

./: .gitignore  Cargo.toml  QUICKSTART.md  README.md  client.ps1  client.py  com.terminal-to-ps.plist  example.ps1  install.sh  run_client.sh  run_server.sh  setup_autostart.sh
src/: client.rs  crypto.rs  main.rs  pipe_server.rs  protocol.rs
