[package]
name = "terminal-to-ps"
version = "0.1.0"
edition = "2021"

[dependencies]
chacha20poly1305 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
base64 = "0.22"
hex = "0.4"
rand = "0.8"
dirs = "5.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Pipes",
    "Win32_Security",
] }
